--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>eureka-server</module>
+        <module>zuul-api-proxy</module>
     </modules>
 
     <parent>
